# newssense

./: README.md  pyproject.toml
data/processed/: baseline_lexicon_resultado.csv  ensemble_resultado.csv  finbert_ptbr_resultado.csv  rotulos.csv  zero_shot_resultado.csv
data/raw/: noticias.csv
notebooks/: 01_eda.ipynb
src/: baseline_lexicon.py  coleta_paginas.py  coleta_rss.py  enriquecer_resumo.py  ensemble.py  finbert_ptbr.py  finetuning.py  rotina_diaria.py  rotular.py  zero_shot_sentimento.py
